[package]
name = "diski"
version = "0.1.0"
edition = "2024"
authors = ["mtcl"]
description = "A CLI tool to neatly display disk info"
license = "MIT" 

[dependencies]
clap = { version = "4", features = ["derive"] }
sysinfo = "0.30" 
prettytable = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0" 

which = "5.0"
