[package]
name = "diski"
version = "0.1.0"
edition = "2024"
authors = ["mtcl"]
description = "A CLI tool to neatly display disk info"
license = "MIT" 

[dependencies]
clap = { version = "4", features = ["derive"] }
comfy-table = "7.1.4"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
